<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="comp3350.rcssys.presentation.EditRecipe" >
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		>
    
	    <EditText
	        android:id="@+id/editRecipe_edittext_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:focusable="true"
	        android:onClick="clickTitle"
	        android:hint="@string/recipe_title"
	        android:textColor="@color/text"
	        android:textColorHint="@color/textHint" />
	
	    <EditText
	        android:id="@+id/editRecipe_edittext_description"
	        android:inputType="textMultiLine"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/description"
	        android:textColor="@color/text"
            android:textColorHint="@color/textHint" />
	    
	    <TextView
	            android:id="@+id/editRecipe_textview_ingredients"
	            android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/ingredient"
			    android:textColor="@color/text" />
	    
	    <Button
		    android:id="@+id/editRecipe_button_addIngredient"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/add_ingredient"
		    android:onClick="addIngredientClick"
		    android:background="@color/flavor"
	   		style="?android:attr/borderlessButtonStyle" />
	    
	    <LinearLayout
	        android:id="@+id/editRecipe_layout_ingredientlistYOYO"
	        android:orientation="vertical"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	    </LinearLayout>
	
	    <EditText
	        android:id="@+id/editRecipe_edittext_directions"
	        android:inputType="textMultiLine"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/directions"
	        android:textColor="@color/text"
            android:textColorHint="@color/textHint" >
	    </EditText>

    </LinearLayout>
</ScrollView>