<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ingredientAddition"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background" >
    
    <TextView
        android:id="@+id/ingredientAddition_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ing_add"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text" />
    
    <EditText 
        android:id="@+id/ingredientAddition_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/ingredientAddition_title"
        android:hint="@string/new_ing_name"
        android:textColor="@color/text"
        android:textColorHint="@color/textHint" />
    
    <EditText 
        android:id="@+id/ingredientAddition_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ingredientAddition_name"
        android:inputType="numberDecimal"
        android:hint="@string/new_ing_amt"
        android:textColor="@color/text"
        android:textColorHint="@color/textHint" />
    
    <Spinner
        android:id="@+id/ingredientAddition_unit"
        android:layout_width="100dp"
        android:layout_height="43dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ingredientAddition_name"
        android:textSize="50sp" />
    
    <TextView 
        android:id="@+id/ingredientAddition_allergies"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ingredientAddition_amount"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/new_ing_allergy"
        android:textColor="@color/text" />
    
    <ListView
        android:id="@+id/ingredientAddition_allergyList"
        android:layout_height="160dp"
        android:layout_width="145dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ingredientAddition_allergies" />
    
    <TextView
        android:id="@+id/ingredientAddition_lifeStyles"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ingredientAddition_amount"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/text"
        android:text="@string/new_ing_ls" />
    
    <ListView
        android:id="@+id/ingredientAddition_lifeStyleList"
        android:layout_height="160dp"
        android:layout_width="145dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ingredientAddition_lifeStyles" />
    
    <EditText
        android:id="@+id/ingredientAddition_newAllergy"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/new_ing_allergy_hint"
        android:textColor="@color/text"
        android:textColorHint="@color/textHint"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ingredientAddition_allergyList" />
    
    <Button
        android:id="@+id/ingredientAddition_allergyAdd"
        android:layout_toRightOf="@+id/ingredientAddition_newAllergy"
        android:layout_below="@+id/ingredientAddition_allergyList"
        android:layout_marginTop="20dp"
        android:layout_height="20dp"
        android:layout_width="20dp"
        android:onClick="saveAllergy"
        android:gravity="center"
        android:text="@string/add"
        android:textColor="@color/text"
        android:background="@color/flavor" />
    
    <EditText
        android:id="@+id/ingredientAddition_newLS"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/text"
        android:textColorHint="@color/textHint"
        android:layout_toLeftOf="@+id/ingredientAddition_lsAdd"
        android:layout_below="@+id/ingredientAddition_lifeStyleList"
        android:hint="@string/new_ing_ls_hint" />
    
    <Button
        android:id="@+id/ingredientAddition_lsAdd"
        android:layout_height="20dp"
        android:layout_width="20dp"
        android:layout_below="@+id/ingredientAddition_lifeStyleList"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:onClick="saveLifeStyle"
        android:gravity="center"
        android:text="@string/add"
        android:textColor="@color/text"
        android:background="@color/flavor" />

    <Button
        android:id="@+id/ingredientAddition_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="saveIngredient"
        android:background="@color/flavor"
        android:text="@string/save"
        android:textColor="@color/text" />
    
</RelativeLayout>