<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipeDisplay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/background"
    tools:context="rcssys.presentation.RecipeDisplay" >

    <EditText
        android:id="@+id/recipeDisplay_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_title_view"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text"
        android:textColorHint="@color/textHint" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="15dp" >

        <TextView
            android:id="@+id/recipeDisplay_ingredientTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredient"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text" />

        <Button
            android:id="@+id/recipeDisplay_addIngredient"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_toLeftOf="@+id/recipeDisplay_deleteIngredient"
            android:background="@drawable/add_ing_button"
            android:onClick="addIng"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/recipeDisplay_deleteIngredient"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/rm_ing_button"
            android:onClick="deleteIng"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <ListView
        android:id="@+id/recipeDisplay_ingredientList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="2"
        android:choiceMode="none"
        android:minHeight="170dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/recipeDisplay_emptyIngredientList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/no_ingredient"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone"
        android:textColor="@color/text" />
    
    <LinearLayout
        android:id="@+id/recipeDisplay_conversionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/recipeDisplay_convertText_from"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/recipeDisplay_convertTextOriginalUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/flavor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/recipeDisplay_convertText_to"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text" />

        <Spinner
            android:id="@+id/recipeDisplay_convertToSpinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text"
            android:textSize="50sp" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/recipeDisplay_descriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

	    <EditText
	        android:id="@+id/recipeDisplay_description"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/description_view"
	        android:paddingBottom="5dp"
	        android:paddingLeft="5dp"
	        android:paddingRight="5dp"
	        android:paddingTop="5dp"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="@color/text"
	        android:textColorHint="@color/textHint" />

    </ScrollView>

    <TextView
        android:id="@+id/recipeDisplay_directionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/directions"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text" />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="5dp" >

	    <EditText
	        android:id="@+id/recipeDisplay_directions"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/directions_view"
	        android:paddingBottom="5dp"
	        android:paddingLeft="5dp"
	        android:paddingRight="5dp"
	        android:paddingTop="5dp"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="@color/text"
	        android:textColorHint="@color/textHint" />

	</ScrollView>

    <Button
        android:id="@+id/recipeDisplay_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="0.05"
        android:onClick="saveClick"
        android:text="@string/save"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="invisible"
        android:textColor="@color/text"
        android:background="@color/flavor" />

</LinearLayout>